--- a/analysis/perf/compose.yaml
+++ b/analysis/perf/compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: tpm-graphs-db
     depends_on:
       - shell
-    image: postgres
+    image: postgres:16.2
     restart: always
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
@@ -16,7 +16,7 @@ services:
 
   shell:
     container_name: tpm-graphs-sh
-    image: alpine
+    image: alpine:3.19
     entrypoint: [ '/bin/sh', '-c' ]
     volumes:
      - "./:/tpm-graphs"
