Add scripts previously ignored by Git

--- a/analysis/perf/.gitignore
+++ b/analysis/perf/.gitignore
@@ -9,5 +9,8 @@
 /data*/
 /result*/
 
+# But do not ignore data-clusters, which contains useful scripts.
+!/data-clusters
+
 # Do not ignore requirements.txt.
 !requirements.txt
