--- a/analysis/perf/.gitignore
+++ b/analysis/perf/.gitignore
@@ -1,11 +1,8 @@
-# Ignore temporary or compiled files
+# Ignore temporary or compiled files.
 *.pyc
 *.swp
 
-# Ignore cache files (but not the directory itself)
-/cache/**
-
-# Ignore directories looking like results or test data
+# Ignore directories looking like results or test data.
 /data*/
 /result*/
 
